--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,13 @@ target_include_directories(maze-gen PUBLIC include)
 
 # Tests
 find_package(Catch2 CONFIG REQUIRED)
+find_package(magic_enum CONFIG REQUIRED)
+
 add_executable(
     tests 
     test/main.cpp 
     test/maze.cpp
     test/maze_context.cpp
 )
-target_link_libraries(tests PRIVATE Catch2::Catch2 maze-gen)
+target_link_libraries(tests PRIVATE Catch2::Catch2 magic_enum::magic_enum maze-gen)
 target_include_directories(tests PRIVATE Catch2::Catch2)
